# attestation-agent

./: .gitignore  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION.md  MAINTAINERS  Makefile  README.md  build.rs
.github/workflows/: basic.yml  cc_kbc.yml  eaa_kbc.yml  kms.yml  occlum_sgx.yml
app/: Cargo.toml
attester/: Cargo.toml
attester/src/: lib.rs
attester/src/cca/: cca-claims-without-realm-challenge.json  mod.rs
attester/src/tdx/: az.rs  mod.rs
coco_keyprovider/: Cargo.toml
examples/cc_kbc/attester/occlum_sgx/: main.rs
kbc/: Cargo.toml
kbs_protocol/: Cargo.toml
kbs_protocol/src/: lib.rs
sample/sample_kbs/: Cargo.toml  build.rs
sample/sample_kbs/src/: sample_kbs.rs
sample/sample_kbs/src/lib/: kbs_annotation.rs  keyprovider.rs  keyprovider_grpc.rs  keywrap.rs  lib.rs
sample_kbs/: README.md
sample_keyprovider/: Cargo.toml
sample_keyprovider/src/enc_mods/cc_kbc_enc/: mod.rs
src/: attestation_agent.rs  lib.rs
src/kbc_modules/cc_kbc/: mod.rs
src/kbc_modules/cc_kbc/attester/: mod.rs
src/kbc_modules/cc_kbc/attester/sev_snp_vtpm/: mod.rs
src/kbc_modules/cc_kbc/attester/sgx_occlum/: mod.rs
src/kbc_modules/cc_kbc/attester/tdx/: mod.rs
src/kbc_modules/cc_kbc/crypto/: mod.rs
src/kbc_modules/eaa_kbc/rats_tls/: mod.rs
src/lib/: kbc.rs  keyprovider.rs  keyprovider_grpc.rs  lib.rs  messages_grpc.rs
src/lib/kbc/: sample_kbc.rs
src/lib/proto/: keyprovider.proto
